Fix some style issues related to overflow

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -25,8 +25,13 @@
   font-size: 1rem;
   white-space: pre-line;
   box-sizing: border-box;
-  overflow: scroll;
   display: block !important;
+
+  > .background.shimmer {
+    position: absolute;
+    top: 0;
+    z-index: -2;
+  }
 }
 
 @media (min-width: 576px) {
@@ -116,6 +121,13 @@ html, body {
 }
 
 #appRoot {
+  height: 100dvh;
+}
+
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 100dvh;
 }
 
@@ -253,13 +265,12 @@ a:focus-visible {
 }
 
 .background-pixel-grid {
-  position: relative;
+  position: absolute;
   width: 100vw;
   height: 100dvh;
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  z-index: -1;
+  top: 0;
  
 
   &::before {
@@ -457,7 +468,7 @@ a:focus-visible {
 }
 
 .form-field label {
-  margin-bottom: 8px;
+  padding-bottom: 8px;
   font-weight: bold;
 }
 
